# servo-dotnet

./: .gitmodules  Directory.Build.props  LICENSE  README.md  Servo.slnx  build-android.sh  build.ps1  build.sh
sample/Servo.AvaloniaUI.Demo/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Servo.AvaloniaUI.Demo.csproj  app.manifest
servo-ffi/: Cargo.toml  README.md  build.rs
servo-ffi/.cargo/: config.toml
servo-ffi/src/: fence_worker.rs  hardware_rendering.rs  lib.rs  resources.rs  shared_event.rs  types.rs  waker.rs
src/: Servo.Native.targets
src/Servo/: Cookie.cs  FaviconData.cs  HardwareRenderingContext.cs  IProtocolHandler.cs  PixelData.cs  ProtocolRegistry.cs  ProtocolResponse.cs  RenderingContext.cs  Servo.csproj  ServoFrame.cs  ServoJsonContext.cs  ServoNative.g.cs  ServoTimelineSemaphore.cs  ServoWebView.cs  SiteDataEntry.cs  SoftwareRenderingContext.cs  UserContentManager.cs  UserScript.cs  UserStyleSheet.cs
src/Servo.AvaloniaUI/: AlertOverlay.cs  AuthenticationOverlay.cs  AvaloniaKeyMapping.cs  BluetoothDeviceOverlay.cs  ColorPickerOverlay.cs  ConfirmOverlay.cs  FilePickerHandler.cs  NotificationOverlay.cs  PermissionOverlay.cs  PromptOverlay.cs  ProtocolHandlerOverlay.cs  SelectElementOverlay.cs  Servo.AvaloniaUI.csproj  ServoAppBuilderExtensions.cs  ServoLocator.cs  ServoRenderingBackend.cs  ServoSurface.cs  ServoTextInputMethodClient.cs  ServoWebViewControl.cs
src/Servo.AvaloniaUI/Rendering/: BitmapFramePresenter.cs  CompositionFramePresenter.cs  IServoFramePresenter.cs
src/Servo/Engine/: ConsoleMessageEventArgs.cs  DevtoolsStartedEventArgs.cs  ServoEngine.cs  ServoErrorEventArgs.cs
src/Servo/Enums/: CompositionState.cs  ConsoleLogLevel.cs  CookieSource.cs  EditingAction.cs  GlApiType.cs  GlContextType.cs  GlDisplayType.cs  InputMethodType.cs  KeyModifiers.cs  LoadStatus.cs  MediaSessionAction.cs  MouseButtonAction.cs  PermissionFeature.cs  PixelFormat.cs  ServoCursor.cs  ServoMouseButton.cs  ServoTheme.cs  StorageTypes.cs  TouchEventType.cs  WebRenderDebugOption.cs  WheelMode.cs
src/Servo/Events/: AlertRequestEventArgs.cs  AuthenticationRequestEventArgs.cs  BluetoothDeviceSelectionEventArgs.cs  ColorPickerRequestEventArgs.cs  ConfirmRequestEventArgs.cs  ContextMenuRequestEventArgs.cs  CrashedEventArgs.cs  (+23 more)
(+15 files in other folders)
